--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,8 @@ site_name: misspy
 copyright: "&copy; 2023 sonyakun"
 repo_url: https://github.com/sonyakun/misspy
 repo_name: sonyakun/misspy
+docs_dir: documents
+site_dir: docs
 
 theme:
   name: material
