--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: misspy
 copyright: "&copy; 2023 sonyakun"
 repo_url: https://github.com/sonyakun/misspy
 repo_name: sonyakun/misspy
-docs_dir: documents
+docs_dir: src
 site_dir: docs
 
 theme:
@@ -31,6 +31,16 @@ extra:
     - name: Japanese
       link: /
       lang: ja
+  consent:
+    title: Cookie consent
+    description:
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+  analytics:
+    provider: google
+    property: 
 
 markdown_extensions:
   - pymdownx.highlight:
